работа на уроке

--- a/sema.ipynb
+++ b/sema.ipynb
@@ -1269,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1280,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1291,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1302,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1323,13 +1323,525 @@
        "         1.31777497, -0.67398796]])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "ndata_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.svm import SVC, SVR, LinearSVR, NuSVR\n",
+    "from sklearn.metrics import *\n",
+    "from sklearn.tree import *\n",
+    "from sklearn.neighbors import KNeighborsRegressor\n",
+    "from sklearn.kernel_ridge import KernelRidge\n",
+    "from sklearn.ensemble import *\n",
+    "\n",
+    "  \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_model(train_X, train_y, test_X, test_y, model, params=[{}], sep='',\n",
+    " show_params=True, return_errors=False, print_errors=True, save_model=True, folder_save_to = './test_models/', preprint_message = '', check_time = False):\n",
+    "    if return_errors:\n",
+    "        res = []\n",
+    "    for param in params:\n",
+    "        test_model = model(**param)\n",
+    "        if check_time:\n",
+    "            time_start = time()\n",
+    "        test_model.fit(train_X, train_y)\n",
+    "        if check_time:\n",
+    "            time_end = time()\n",
+    "        if preprint_message!='':\n",
+    "            print(preprint_message)\n",
+    "        if params != [{}] and show_params:\n",
+    "            print(\"Параметры:\", param)\n",
+    "        if print_errors:\n",
+    "            print(\"Оценка (MAE):\", mean_absolute_error(test_model.predict(test_X).astype(int), test_y))\n",
+    "            print(end=sep)\n",
+    "        if check_time:\n",
+    "            print(f\"Время: {time_end-time_start}\")\n",
+    "        if return_errors:\n",
+    "            res.append(mean_absolute_error(test_model.predict(test_X).astype(int), test_y))\n",
+    "    if return_errors:\n",
+    "        return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import PolynomialFeatures, StandardScaler\n",
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def split_data(df):\n",
+    "    X_data, Y_data = df.loc[:,:], df[\"Age\"]\n",
+    "    X_data = X_data.drop(['Age'], axis=1, inplace=False)\n",
+    "    X_train,  X_test,  y_train,  y_test =  train_test_split(X_data, Y_data,  test_size= 0.20,  random_state= 42 )\n",
+    "    splitted_data = [X_train, y_train, X_test, y_test]\n",
+    "    \n",
+    "    scaler = StandardScaler()\n",
+    "    scaler.fit(X_train)\n",
+    "    norm_X_train = scaler.transform(X_train)\n",
+    "    norm_X_test = scaler.transform(X_test)\n",
+    "    norm_splitted_data = [norm_X_train, y_train, norm_X_test, y_test]\n",
+    "\n",
+    "    # данные, дополненные полиномами\n",
+    "    poly = PolynomialFeatures(degree = 2)\n",
+    "    poly_splitted_data = [poly.fit_transform(norm_X_train), y_train, poly.transform(norm_X_test), y_test]\n",
+    "    return norm_splitted_data, poly_splitted_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Diameter</th>\n",
+       "      <th>Height</th>\n",
+       "      <th>Shucked</th>\n",
+       "      <th>Viscera</th>\n",
+       "      <th>Shell</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>IsMale</th>\n",
+       "      <th>IsFemale</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.365</td>\n",
+       "      <td>0.095</td>\n",
+       "      <td>0.2245</td>\n",
+       "      <td>0.1010</td>\n",
+       "      <td>0.1500</td>\n",
+       "      <td>16.5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.265</td>\n",
+       "      <td>0.090</td>\n",
+       "      <td>0.0995</td>\n",
+       "      <td>0.0485</td>\n",
+       "      <td>0.0700</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.420</td>\n",
+       "      <td>0.135</td>\n",
+       "      <td>0.2565</td>\n",
+       "      <td>0.1415</td>\n",
+       "      <td>0.2100</td>\n",
+       "      <td>10.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.365</td>\n",
+       "      <td>0.125</td>\n",
+       "      <td>0.2155</td>\n",
+       "      <td>0.1140</td>\n",
+       "      <td>0.1550</td>\n",
+       "      <td>11.5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.255</td>\n",
+       "      <td>0.080</td>\n",
+       "      <td>0.0895</td>\n",
+       "      <td>0.0395</td>\n",
+       "      <td>0.0550</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4172</th>\n",
+       "      <td>0.450</td>\n",
+       "      <td>0.165</td>\n",
+       "      <td>0.3700</td>\n",
+       "      <td>0.2390</td>\n",
+       "      <td>0.2490</td>\n",
+       "      <td>12.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4173</th>\n",
+       "      <td>0.440</td>\n",
+       "      <td>0.135</td>\n",
+       "      <td>0.4390</td>\n",
+       "      <td>0.2145</td>\n",
+       "      <td>0.2605</td>\n",
+       "      <td>11.5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4174</th>\n",
+       "      <td>0.475</td>\n",
+       "      <td>0.205</td>\n",
+       "      <td>0.5255</td>\n",
+       "      <td>0.2875</td>\n",
+       "      <td>0.3080</td>\n",
+       "      <td>10.5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4175</th>\n",
+       "      <td>0.485</td>\n",
+       "      <td>0.150</td>\n",
+       "      <td>0.5310</td>\n",
+       "      <td>0.2610</td>\n",
+       "      <td>0.2960</td>\n",
+       "      <td>11.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4176</th>\n",
+       "      <td>0.555</td>\n",
+       "      <td>0.195</td>\n",
+       "      <td>0.9455</td>\n",
+       "      <td>0.3765</td>\n",
+       "      <td>0.4950</td>\n",
+       "      <td>13.5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4165 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Diameter  Height  Shucked  Viscera   Shell   Age  IsMale  IsFemale\n",
+       "0        0.365   0.095   0.2245   0.1010  0.1500  16.5       1         0\n",
+       "1        0.265   0.090   0.0995   0.0485  0.0700   8.5       1         0\n",
+       "2        0.420   0.135   0.2565   0.1415  0.2100  10.5       0         1\n",
+       "3        0.365   0.125   0.2155   0.1140  0.1550  11.5       1         0\n",
+       "4        0.255   0.080   0.0895   0.0395  0.0550   8.5       0         0\n",
+       "...        ...     ...      ...      ...     ...   ...     ...       ...\n",
+       "4172     0.450   0.165   0.3700   0.2390  0.2490  12.5       0         1\n",
+       "4173     0.440   0.135   0.4390   0.2145  0.2605  11.5       1         0\n",
+       "4174     0.475   0.205   0.5255   0.2875  0.3080  10.5       1         0\n",
+       "4175     0.485   0.150   0.5310   0.2610  0.2960  11.5       0         1\n",
+       "4176     0.555   0.195   0.9455   0.3765  0.4950  13.5       1         0\n",
+       "\n",
+       "[4165 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "splitted_data, poly_splitted_data = split_data(clean_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SVR\n",
+      "Параметры: {'kernel': 'linear', 'gamma': 'auto'}\n",
+      "Оценка (MAE): 1.7232893157262905\n",
+      "SVR\n",
+      "Параметры: {'kernel': 'poly', 'degree': 2, 'gamma': 'auto'}\n",
+      "Оценка (MAE): 1.9633853541416566\n",
+      "SVR\n",
+      "Параметры: {'kernel': 'rbf', 'gamma': 'auto'}\n",
+      "Оценка (MAE): 1.6608643457382952\n",
+      "LinearSVR\n",
+      "Параметры: {'C': 1.0, 'max_iter': 10000}\n",
+      "Оценка (MAE): 1.7292917166866746\n",
+      "LinearSVR\n",
+      "Параметры: {'C': 5.0, 'max_iter': 100000}\n",
+      "Оценка (MAE): 1.7352941176470589\n",
+      "LinearSVR\n",
+      "Параметры: {'C': 125.0, 'max_iter': 100000}\n",
+      "Оценка (MAE): 1.7292917166866746\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\user\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\sklearn\\svm\\_base.py:1206: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LinearSVR\n",
+      "Параметры: {'C': 625.0, 'max_iter': 100000}\n",
+      "Оценка (MAE): 1.7292917166866746\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\user\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\sklearn\\svm\\_base.py:1206: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LinearSVR\n",
+      "Параметры: {'C': 2500.0, 'max_iter': 100000}\n",
+      "Оценка (MAE): 1.7388955582232892\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\user\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\sklearn\\svm\\_base.py:1206: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LinearSVR\n",
+      "Параметры: {'C': 12500.0, 'max_iter': 100000}\n",
+      "Оценка (MAE): 1.8481392557022809\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\user\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\sklearn\\svm\\_base.py:1206: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LinearSVR\n",
+      "Параметры: {'C': 62500.0, 'max_iter': 100000}\n",
+      "Оценка (MAE): 1.7472989195678272\n",
+      "NuSVR\n",
+      "Параметры: {'nu': 0.01, 'gamma': 'auto'}\n",
+      "Оценка (MAE): 3.3547418967587035\n",
+      "NuSVR\n",
+      "Параметры: {'nu': 0.1, 'gamma': 'auto'}\n",
+      "Оценка (MAE): 1.7641056422569028\n",
+      "NuSVR\n",
+      "Параметры: {'nu': 0.2, 'gamma': 'auto'}\n",
+      "Оценка (MAE): 1.563625450180072\n",
+      "NuSVR\n",
+      "Параметры: {'nu': 0.3, 'gamma': 'auto'}\n",
+      "Оценка (MAE): 1.5924369747899159\n",
+      "NuSVR\n",
+      "Параметры: {'nu': 0.4, 'gamma': 'auto'}\n",
+      "Оценка (MAE): 1.6152460984393757\n",
+      "NuSVR\n",
+      "Параметры: {'nu': 0.5, 'gamma': 'auto'}\n",
+      "Оценка (MAE): 1.628451380552221\n",
+      "NuSVR\n",
+      "Параметры: {'nu': 0.6, 'gamma': 'auto'}\n",
+      "Оценка (MAE): 1.634453781512605\n",
+      "NuSVR\n",
+      "Параметры: {'nu': 0.8, 'gamma': 'auto'}\n",
+      "Оценка (MAE): 1.6536614645858343\n",
+      "NuSVR\n",
+      "Параметры: {'nu': 1.0, 'gamma': 'auto'}\n",
+      "Оценка (MAE): 1.662064825930372\n",
+      "DecisionTreeRegressor\n",
+      "Параметры: {'max_depth': 1}\n",
+      "Оценка (MAE): 1.9945978391356542\n",
+      "DecisionTreeRegressor\n",
+      "Параметры: {'max_depth': 2}\n",
+      "Оценка (MAE): 1.8841536614645857\n",
+      "DecisionTreeRegressor\n",
+      "Параметры: {'max_depth': 3}\n",
+      "Оценка (MAE): 1.8265306122448979\n",
+      "DecisionTreeRegressor\n",
+      "Параметры: {'max_depth': 4}\n",
+      "Оценка (MAE): 1.755702280912365\n",
+      "DecisionTreeRegressor\n",
+      "Параметры: {'max_depth': 5}\n",
+      "Оценка (MAE): 1.6956782713085234\n",
+      "DecisionTreeRegressor\n",
+      "Параметры: {'max_depth': 6}\n",
+      "Оценка (MAE): 1.741296518607443\n",
+      "DecisionTreeRegressor\n",
+      "Параметры: {'max_depth': 7}\n",
+      "Оценка (MAE): 1.7328931572629052\n",
+      "DecisionTreeRegressor\n",
+      "Параметры: {'max_depth': 8}\n",
+      "Оценка (MAE): 1.755702280912365\n",
+      "DecisionTreeRegressor\n",
+      "Параметры: {'max_depth': 9}\n",
+      "Оценка (MAE): 1.8025210084033614\n",
+      "KNeighborsRegressor\n",
+      "Параметры: {'n_neighbors': 3}\n",
+      "Оценка (MAE): 1.804921968787515\n",
+      "KNeighborsRegressor\n",
+      "Параметры: {'n_neighbors': 4}\n",
+      "Оценка (MAE): 1.7208883553421368\n",
+      "KNeighborsRegressor\n",
+      "Параметры: {'n_neighbors': 5}\n",
+      "Оценка (MAE): 1.7136854741896759\n",
+      "KNeighborsRegressor\n",
+      "Параметры: {'n_neighbors': 6}\n",
+      "Оценка (MAE): 1.6716686674669867\n",
+      "KNeighborsRegressor\n",
+      "Параметры: {'n_neighbors': 7}\n",
+      "Оценка (MAE): 1.683673469387755\n",
+      "KNeighborsRegressor\n",
+      "Параметры: {'n_neighbors': 8}\n",
+      "Оценка (MAE): 1.663265306122449\n",
+      "KNeighborsRegressor\n",
+      "Параметры: {'n_neighbors': 9}\n",
+      "Оценка (MAE): 1.6644657863145258\n",
+      "KNeighborsRegressor\n",
+      "Параметры: {'n_neighbors': 10}\n",
+      "Оценка (MAE): 1.648859543817527\n",
+      "KernelRidge\n",
+      "Параметры: {'alpha': 0.001}\n",
+      "Оценка (MAE): 11.584033613445378\n",
+      "KernelRidge\n",
+      "Параметры: {'alpha': 0.01}\n",
+      "Оценка (MAE): 11.584033613445378\n",
+      "KernelRidge\n",
+      "Параметры: {'alpha': 0.1}\n",
+      "Оценка (MAE): 11.584033613445378\n",
+      "KernelRidge\n",
+      "Параметры: {'alpha': 1.0}\n",
+      "Оценка (MAE): 11.584033613445378\n",
+      "KernelRidge\n",
+      "Параметры: {'alpha': 10.0}\n",
+      "Оценка (MAE): 11.585234093637455\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "test_model(*splitted_data, SVR, params=[\n",
+    "    {'kernel': 'linear', 'gamma':'auto'}, \n",
+    "    {'kernel': 'poly', 'degree': 2, 'gamma':'auto'}, \n",
+    "    {'kernel': 'rbf', 'gamma':'auto'}], preprint_message = 'SVR')\n",
+    "\n",
+    "params = [\n",
+    "    {'C':1.0, 'max_iter':10000}, \n",
+    "    {'C':5.0, 'max_iter':100000}, \n",
+    "    {'C':125.0, 'max_iter':100000},\n",
+    "    {'C':625.0, 'max_iter':100000},\n",
+    "    {'C':2500.0, 'max_iter':100000},\n",
+    "    {'C':12500.0, 'max_iter':100000},\n",
+    "    {'C':62500.0, 'max_iter':100000},]\n",
+    "test_model(*splitted_data, LinearSVR, params=params, preprint_message = 'LinearSVR')\n",
+    "\n",
+    "params = [{'nu':x, 'gamma':'auto'} for x in [.01,.1,.2,.3,.4,.5,.6,.8,1.0]]\n",
+    "test_model(*splitted_data, NuSVR, params=params, preprint_message = 'NuSVR')\n",
+    "\n",
+    "params = [{\"max_depth\":x} for x in range(1,10)]\n",
+    "test_model(*splitted_data, DecisionTreeRegressor, params, preprint_message = 'DecisionTreeRegressor')\n",
+    "\n",
+    "params = [{'n_neighbors':x} for x in (3,4,5,6,7,8,9,10)]\n",
+    "test_model(*splitted_data, KNeighborsRegressor, params = params, preprint_message = 'KNeighborsRegressor')\n",
+    "\n",
+    "params = [{'alpha':x} for x in (0.001, 0.01, 0.1, 1.0, 10.0)]\n",
+    "test_model(*splitted_data, KernelRidge, params = params, preprint_message = 'KernelRidge')"
    ]
   },
   {
