--- a/sema.ipynb
+++ b/sema.ipynb
@@ -6021,7 +6021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8044,15 +8044,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "best_models = [[SVR, {'kernel': 'poly', 'degree': 2, 'gamma': 'scale', 'max_iter': 1000000}],\n",
+    "              [LinearRegression, {}],\n",
+    "              [MLPRegressor, {'hidden_layer_sizes': (20,), 'solver': 'lbfgs', 'random_state': 42, 'max_iter': 5000}],\n",
+    "              [MLPRegressor, {'hidden_layer_sizes': (4, 10), 'solver': 'lbfgs', 'random_state': 42, 'max_iter': 5000}],\n",
+    "              [NuSVR, {'nu': 1.0, 'gamma': 'auto'}],\n",
+    "              [VotingRegressor, {'estimators': [('gb', GradientBoostingRegressor(n_estimators=95, random_state=42)), ('lr', LinearRegression())]}]\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Модель: SVR\n",
+      "Параметры {'kernel': 'poly', 'degree': 2, 'gamma': 'scale', 'max_iter': 1000000}\n",
+      "Оценка (MAE): 1.5493201627570818\n",
+      "\n",
+      "Модель: LinearRegression\n",
+      "Параметры {}\n",
+      "Оценка (MAE): 1.6209857472728602\n",
+      "\n",
+      "Модель: MLPRegressor\n",
+      "Параметры {'hidden_layer_sizes': (20,), 'solver': 'lbfgs', 'random_state': 42, 'max_iter': 5000}\n",
+      "Оценка (MAE): 1.4953290447005925\n",
+      "\n",
+      "Модель: MLPRegressor\n",
+      "Параметры {'hidden_layer_sizes': (4, 10), 'solver': 'lbfgs', 'random_state': 42, 'max_iter': 5000}\n",
+      "Оценка (MAE): 1.503369173410788\n",
+      "\n",
+      "Модель: NuSVR\n",
+      "Параметры {'nu': 1.0, 'gamma': 'auto'}\n",
+      "Оценка (MAE): 1.6881541332887784\n",
+      "\n",
+      "Модель: VotingRegressor\n",
+      "Параметры {'estimators': [('gb', GradientBoostingRegressor(n_estimators=95, random_state=42)), ('lr', LinearRegression())]}\n",
+      "Оценка (MAE): 1.5760139727351494\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def try_model(model_t, params, train_x, train_y, test_x, test_y):\n",
+    "    model_name = model_t.__name__\n",
+    "    print('Модель:', model_name)\n",
+    "    print('Параметры', str(params))\n",
+    "    \n",
+    "    model = model_t(**params)\n",
+    "    model.fit(train_x, train_y)\n",
+    "    print(\"Оценка (MAE):\", mean_absolute_error(model.predict(test_x), test_y))\n",
+    "\n",
+    "full_data = data[0]\n",
+    "train_data, test_data, _, _ = full_data\n",
+    "for model, params in best_models:\n",
+    "    try_model(model, params, *train_data, *test_data)\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Из данных выше видно, что лучше всех с задачей справляется MLPRegressor."
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -8066,7 +8134,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
